--- a/sections/sec_6_3.tex
+++ b/sections/sec_6_3.tex
@@ -174,6 +174,8 @@
   (c) If $A \in V_\w$ and $f$ is a function on $A$ such that $f(x) \in V_\w$ for each $x \in A$, then $f[X] \in V_\w$.
 
   (d) If $X$ is a finite subset of $V_\w$, then $X \in V_\w$.
+
+  Note that part (c) differs slightly from the book; see the Errata List.
 }
 \sol{
 
