-Added macro for the Cantor-Berstein thorem so I don't have to type it out all the time -Reformatted the errata.tex code a bit -Completed exercises 9.1.13 through 9.1.15, completing section 9.1 exercises

--- a/macros.tex
+++ b/macros.tex
@@ -117,6 +117,9 @@
 \def\mainprob{\textbf{Main Problem.}}
 \def\mainthrm{\textbf{Main Theorem.}}
 
+% Saves some typing
+\def\cbthrm{Cantor-Bernstein Theorem}
+
 % Book title
 \def\booktitle{
   Introduction to Set Theory \\
