--- a/sections/sec_5_2.tex
+++ b/sections/sec_5_2.tex
@@ -48,7 +48,7 @@
     \ccont = |\reals| = |E| \leq |F|
     $$
     by Exercise 4.1.3.
-    Thus by the Cantor-Bernstein Theorem $|F| = \ccont$ as required.
+    Thus by the \cbthrm{} $|F| = \ccont$ as required.
   }
 }
 
@@ -178,7 +178,7 @@
       &= 2^{\ccont \cdot \ccont} & \text{(by Theorem 5.1.7b)} \\
       &= 2^\ccont & \text{(by Theorem 5.2.2b)}
     }
-    Clearly these together with the Cantor-Bernstein Theorem shows the desired result.
+    Clearly these together with the \cbthrm{} shows the desired result.
   }
 }
 
@@ -213,7 +213,7 @@
     $$
     |B-A| \leq |B| = 2^\ccont \,.
     $$
-    Hence by the Cantor-Bernstein Theorem $|B-A| = 2^\ccont$ as desired.
+    Hence by the \cbthrm{} $|B-A| = 2^\ccont$ as desired.
   }
 
   \mainprob
