--- a/sections/sec_6_1.tex
+++ b/sections/sec_6_1.tex
@@ -151,7 +151,7 @@
     $$
     \ccont = |2^\nats| \leq |B| \leq |R| \,.
     $$
-    It then follows from the Cantor-Bernstein Theorem that $|R| = \ccont$ as desired.
+    It then follows from the \cbthrm{} that $|R| = \ccont$ as desired.
   }
 }
 
