--- a/sections/sec_7_2.tex
+++ b/sections/sec_7_2.tex
@@ -229,7 +229,7 @@
     $$
     \ala = \ala + 0 \leq \ala + \ala \,.
     $$
-    Hence, by the Cantor-Bernstein Theorem we have that $\ala = \ala + \ala$, which completes the inductive step.
+    Hence, by the \cbthrm{} we have that $\ala = \ala + \ala$, which completes the inductive step.
   }
 }
 
@@ -345,7 +345,7 @@
     Since $\b_1 < \b_2$ it then follows that $\b_1 \notin X_2$, but since $\b_1 \in X_1$ this clearly implies that $f(\b_1) = X_1 \neq X_2 = f(\b_2)$.
     This shows that $f$ is injective so that $\ala = \abs{\w_\a} \leq \abs{\nss{n}}$.
 
-    Since we have shown that both $\abs{\nss{n}} \leq \ala$ and $\ala \leq \abs{\nss{n}}$, it follows from the Cantor-Bernstein Theorem that $\abs{\nss{n}} = \ala$, which is what we intended to show.
+    Since we have shown that both $\abs{\nss{n}} \leq \ala$ and $\ala \leq \abs{\nss{n}}$, it follows from the \cbthrm{} that $\abs{\nss{n}} = \ala$, which is what we intended to show.
   }
 
   (c)
@@ -557,7 +557,7 @@
     $$
     where we have utilized Corollary~7.2.2 since $0 \leq \g$.
     Also clearly $\al_\g \leq \abs{\Seq(A)}$ since, for example, the function $f: \w_\g \to \Seq(A)$ defined by $f(\a) = \angles{\a}$ (for any $\a < \w_\g$) is injective.
-    Thus by the Cantor-Bernstein Theorem we have $\abs{\Seq(A)} = \al_\g$ as desired.
+    Thus by the \cbthrm{} we have $\abs{\Seq(A)} = \al_\g$ as desired.
   }
 
   \begin{cor}\label{cor:aleph:orcarar:seqfin}
@@ -573,7 +573,7 @@
     For any $n < \w$ consider the finite sequence $g_n(k) = a$ for any $k < n$, which is clearly a sequence of length $n$ with elements in $A$.
     Consider then the function $f$ from $\w$ to $\Seq(A)$ defined $f(n) = g_n$ for $n < \w$.
     Clearly this is a injective function since, for any $n_1$ and $n_2$ in $\w$ where $n_1 \neq n_2$, we have that $f(n_1) = g_{n_1}$ and $f(n_2) = g_{n_2}$ are sequences of different lengths so cannot be equal.
-    Thus we have $\al_0 = \abs{\w} \leq \abs{\Seq(a)}$ as well so that $\abs{\Seq(A)} = \al_0$ by the Cantor-Bernstein Theorem.
+    Thus we have $\al_0 = \abs{\w} \leq \abs{\Seq(a)}$ as well so that $\abs{\Seq(A)} = \al_0$ by the \cbthrm{}.
   }
 
   \def\afs{\squares{A}^{< \w}}
@@ -731,6 +731,6 @@
     which is clearly a contradiction.
     Thus it must be that $\abs{\w_\a - X} \nless \al_\a$ so that $\al_\a \leq \abs{\w_\a - X}$ by Corollary~\ref{cor:aleph:wonlegt}.
     Since $\w_\a - X \ss \w_\a$ we clearly also have that $\abs{\w_\a - X} \leq \abs{\w_\a} = \al_\a$.
-    Hence $\abs{\w_\a - X} = \al_\a$ by the Cantor-Bernstein Theorem.
+    Hence $\abs{\w_\a - X} = \al_\a$ by the \cbthrm{}.
   }
 }
