--- a/shared/lem_aleph_initle.tex
+++ b/shared/lem_aleph_initle.tex
@@ -4,7 +4,7 @@
 \qproof{
   Suppose that $\abs{\a} \leq \abs{\b}$ but that $\a > \b$.
   Then clearly $\b$ is isomorphic (and therefore equipotent) to an initial segment of $\a$ so that $\abs{\b} \leq \abs{\a}$.
-  Then by the Cantor-Bernstein Theorem we have $\abs{\a} = \abs{\b}$.
+  Then by the \cbthrm{} we have $\abs{\a} = \abs{\b}$.
   However since $\a$ is an initial ordinal and $\b < \a$ it cannot be that $\abs{\a} = \abs{\b}$.
   Thus we have a contradiction so that it must be that $\a \leq \b$ as desired.
 }
