--- a/errata.tex
+++ b/errata.tex
@@ -17,28 +17,45 @@
 
 \begin{enumerate}
 
-\item Page 62, Exercise 3.5.4. The hint should read ``Let $h(x) = A - x$; \ldots'' instead of ``Let $h(x) = B - x$; \ldots''.
+\item Page 62, Exercise 3.5.4.
+  The hint should read ``Let $h(x) = A - x$; \ldots'' instead of ``Let $h(x) = B - x$; \ldots''.
   (Confirmed by Dr. Jech)
 
-\item Page 101, Exercise 5.2.3. This means that that the countable dense subset is dense in $P$ rather than simply dense with respect to itself.
+\item Page 101, Exercise 5.2.3.
+  This means that that the countable dense subset is dense in $P$ rather than simply dense with respect to itself.
   This has to be the case because, if were merely dense with respect to itself, then \emph{any} larger linearly ordered set containing the subset would have the same property so that it is impossible to put a bound on the size of that set (Confirmed)
 
-\item Page 114, Exercise 6.3.5 part (c). This should read ``\ldots, then $f[A] \in V_\w$.'' instead of ``\ldots, then $f[X] \in V_\w$.'' since $X$ has not been previously defined. (Unconfirmed)
+\item Page 114, Exercise 6.3.5 part (c).
+  This should read ``\ldots, then $f[A] \in V_\w$.'' instead of ``\ldots, then $f[X] \in V_\w$.'' since $X$ has not been previously defined.
+  (Unconfirmed)
 
-\item Page 140, bottom. The reference to Assumption~1.7 in Chapter~4 should really be Assumption~1.8. (Unconfirmed)
+\item Page 140, bottom.
+  The reference to Assumption~1.7 in Chapter~4 should really be Assumption~1.8.
+  (Unconfirmed)
 
-\item Page 142, bottom. The reference to Theorem~4.4 in Chapter~7 should be Theorem~4.4 in Chapter~6. (Unconfirmed)
+\item Page 142, bottom.
+  The reference to Theorem~4.4 in Chapter~7 should be Theorem~4.4 in Chapter~6.
+  (Unconfirmed)
 
-\item Page 143 top. In the proof of Theorem~8.1.13 when showing that (c) implies (a) the sentence, ``Let $F$ be the system of all functions $f$ for which $\dom{f} \ss S$ and $f(X) \in X$ holds for any $X \in S$.'' should be, ``\ldots and $f(X) \in X$ holds for any $X \in \dom{f}$.''
-  This is because, if $\dom{f} \pss S$, then there is an $X \in S$ where $X \notin \dom{f}$ so that $f(X)$ is not defined. (Unconfirmed)
+\item Page 143 top.
+  In the proof of Theorem~8.1.13 when showing that (c) implies (a) the sentence, ``Let $F$ be the system of all functions $f$ for which $\dom{f} \ss S$ and $f(X) \in X$ holds for any $X \in S$.'' should be, ``\ldots and $f(X) \in X$ holds for any $X \in \dom{f}$.''
+  This is because, if $\dom{f} \pss S$, then there is an $X \in S$ where $X \notin \dom{f}$ so that $f(X)$ is not defined.
+  (Unconfirmed)
 
-\item Page 143, middle. In the proof of Theorem~8.1.14 there are two times in the first paragraph where statements are made for all or for some $\x \in A$.
-  These should be $\x < \l$. (Unconfirmed)
+\item Page 143, middle.
+  In the proof of Theorem~8.1.14 there are two times in the first paragraph where statements are made for all or for some $\x \in A$.
+  These should be $\x < \l$.
+  (Unconfirmed)
+
+\item Page 158, bottom.
+  Near the end of the first paragraph of the proof of Theorem~9.1.7 (K{\"o}nig's Theorem), the sentence, ``If $i_x \neq i_y = i$, then $a_i = d_i \notin A$ while $b_i = y \in A$.'' should be, ``If $i_x \neq i_y = i$, then $a_i = d_i \notin A_i$ while $b_i = y \in A_i$.''
+  (Unconfirmed)
 
 \item Page 160, Exercise 9.1.11.
   The special case mentioned in the hint should be $\parens{\k \cdot \l}^\mu = \k^\mu \cdot \l^\mu$.
-  This is evidenced by the fact that $\parens{\k^\mu}^\l = \parens{\k^\l}^\mu$ does not make sense in the context of the problem (i.e. it is not a special case) as well as by the fact that it is not part of Theorem~5.1.7. (Unconfirmed)
-  
+  This is evidenced by the fact that $\parens{\k^\mu}^\l = \parens{\k^\l}^\mu$ does not make sense in the context of the problem (i.e. it is not a special case) as well as by the fact that it is not part of Theorem~5.1.7.
+  (Unconfirmed)
+
 \end{enumerate}
 
 \end{document}
