-Made some minor changes and corrections

--- a/macros.tex
+++ b/macros.tex
@@ -29,7 +29,7 @@
 \def\bic{\leftrightarrow}
 
 % For set-buider notation
-\def\where{\,|\,}
+\def\where{\mid}
 
 % Other stuff
 \def\dom{\mathrm{dom}\,}
