--- a/sections/sec_5_1.tex
+++ b/sections/sec_5_1.tex
@@ -311,7 +311,7 @@
     However, if we add the restriction that $\k_2 > 0$ then it becomes true.
     To prove this first note that this implies that $A_2 \neq \es$ so that there is an $a_2 \in A_2$.
     Also there is an injective function $f: A_1 \to A_2$ and an injective function $g: B_1 \to B_2$.
-    We shall construct an injective $F: A_1^{B_1} \leq A_2^{B_2}$, from which it follows that
+    We shall construct an injective $F: A_1^{B_1} \to A_2^{B_2}$, from which it follows that
     $$
     \k_1^{\l_1} = |A_1^{B_1}| \leq |A_2^{B_2}| = \k_2^{\l_2} \,.
     $$
